fixed drawer height issue on firefox; minor fixes for the drawer shadow

--- a/less/components/site-drawer.less
+++ b/less/components/site-drawer.less
@@ -4,6 +4,7 @@
     position: absolute;
     z-index: 998;
     min-height: 100vh;
+    height: 100%;
     width: 0;
     left: 100%;
     top: 0;
@@ -18,12 +19,13 @@
     .drawer-inner-wrapper {
         overflow: visible;
         background-color: @drawerBgColor;
-        box-shadow: inset 0px 0 6px rgba(0, 0, 0, 0.3);
-        padding: 26px 16px;
+        box-shadow: inset 0px 0 4px rgba(0, 0, 0, 0.3), 0px 0 2px rgba(0, 0, 0, 0.3);
+        padding: 26px 10px;
         text-align: left;
         position: relative;
         min-height: 100vh;
         width: 100%;
+        height: 100%;
 
         h2 {
             font-size: 2.4rem;
@@ -40,6 +42,7 @@
             background: url("/assets/drawer-toggle.svg") left top no-repeat;
             height: 55.5px;
             width: 22.64px;
+            outline: none !important;
         }
     }
 }
